crates/rargs/tests/snapshots/test_scripts__stdout private.sh connect --protocol ftp localhost.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] private.sh connect --protocol ftp localhost"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
FTP!!!
--protocol ftp localhost
